     AUTHENTICATION" sections into "AUTHENTICATION";
     some rewording done to make the text read better, plus some
     improvements from djm;
     ok djm
   - jmc@cvs.openbsd.org 2005/12/31 13:44:04
     [ssh.1]
     clean up ENVIRONMENT a little;
   - jmc@cvs.openbsd.org 2005/12/31 13:45:19
     [ssh.1]
     .Nm does not require an argument;

20060101
 - (djm) [Makefile.in configure.ac includes.h misc.c]
         [openbsd-compat/port-tun.c openbsd-compat/port-tun.h] Add support
         for tunnel forwarding for FreeBSD and NetBSD. NetBSD's support is
         limited to IPv4 tunnels only, and most versions don't support the
         tap(4) device at all.
 - (djm) [configure.ac] Fix linux/if_tun.h test
 - (djm) [openbsd-compat/port-tun.c] Linux needs linux/if.h too

20051229
 - (djm) OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2005/12/28 22:46:06
     [canohost.c channels.c clientloop.c]
     use 'break-in' for consistency; ok deraadt@ ok and input jmc@
   - reyk@cvs.openbsd.org 2005/12/30 15:56:37
     [channels.c channels.h clientloop.c]
     add channel output filter interface.
     ok djm@, suggested by markus@
   - jmc@cvs.openbsd.org 2005/12/30 16:59:00
     [sftp.1]
     do not suggest that interactive authentication will work
     with the -b flag;
     based on a diff from john l. scarfone;
     ok djm
   - stevesk@cvs.openbsd.org 2005/12/31 01:38:45
     [ssh.1]
     document -MM; ok djm@
 - (djm) [openbsd-compat/port-tun.c openbsd-compat/port-tun.h configure.ac]
   [serverloop.c ssh.c openbsd-compat/Makefile.in]
   [openbsd-compat/openbsd-compat.h] Implement tun(4) forwarding 
   compatability support for Linux, diff from reyk@
 - (djm) [configure.ac] Disable Linux tun(4) compat code if linux/tun.h does
   not exist
 - (djm) [configure.ac] oops, make that linux/if_tun.h

20051229
 - (tim) [buildpkg.sh.in] grep for $SSHDUID instead of $SSHDGID on /etc/passwd

20051224
 - (djm) OpenBSD CVS Sync
   - jmc@cvs.openbsd.org 2005/12/20 21:59:43